added the js for data-js expandable

--- a/app/views/application/styleguide.html.erb
+++ b/app/views/application/styleguide.html.erb
@@ -266,6 +266,10 @@
       <a href="#" class="expandable">Why not on this link too</a>
       <div>Sample div. Not nested, just next in the flow</div>
 
+      <h3 data-js="expandable">With data-js no classes</h3>
+      <div class="my-well-black">Sample div. Not nested, just next in the flow</div>
+
+
       <div class="expandable plus-icon span7 green text-khaki pad-lrg">div.expandable.plus-icon.span7.green.text-khaki.pad-lrg</div>
       <div class="my-well-mid">Sample div. Not nested, just next in the flow</div>
 
