--- a/app/assets/stylesheets/components/topbar.css.scss
+++ b/app/assets/stylesheets/components/topbar.css.scss
@@ -47,7 +47,7 @@
   text-align: center;
   text-transform: uppercase;
   font-size: 1.8em;
-  color: khaki;
+  //color: khaki;
   @media (max-width: 630px) {
     font-size: 1.65em;
   }
