--- a/app/views/restaurants/_new_item_multiple_select.html.erb
+++ b/app/views/restaurants/_new_item_multiple_select.html.erb
@@ -1,7 +1,7 @@
 <div class="wrapper input-list-double pad-y-lrg" id="multiple_select_mod_table">
   <label>Multiple Select Option</label>
   <div class="row-new"><%= text_field_tag :ms_title, nil, :placeholder=>"Options Title" %></div>
-  <p>Customers could have none, or all</p>
+  <p>Customers could have none, or all of the following</p>
 
   <%= text_field_tag :ms_name_1, nil, :placeholder=>"Option 1 Name" %>
   <%= text_field_tag :ms_price_1, nil, :type=>"number", :placeholder=>"Price 1" %>
