--- a/app/views/restaurants/_new_item_single_select.html.erb
+++ b/app/views/restaurants/_new_item_single_select.html.erb
@@ -3,14 +3,13 @@
   <div class="row-new">
     <%= text_field_tag :ss_title, nil, :placeholder=>"Options Title (type of bread, spicy level)" %>
   </div>
-  <p>Customer can only add only one of the followering:</p>
+  <p>Customer can only add only one of the following:</p>
   <%= text_field_tag :ss_name_1, nil, :placeholder=>"Option 1 Name" %>
   <%= text_field_tag :ss_price_1, nil, :type=>"number", :placeholder=>"Price 1" %>
   <%= text_field_tag :ss_name_2, nil, :placeholder=>"Option 2 Name" %>
   <%= text_field_tag :ss_price_2, nil, :type=>"number", :placeholder=>"Price 2" %>
   <%= text_field_tag :ss_name_3, nil, :placeholder=>"Option 3 Name" %>
   <%= text_field_tag :ss_price_3, nil, :type=>"number", :placeholder=>"Price 3" %>
-  <label>Hello World</label>
   <%= text_field_tag :ss_name_4, nil, :placeholder=>"Option 4 Name" %>
   <%= text_field_tag :ss_price_4, nil, :type=>"number", :placeholder=>"Price 4" %> 
   <%= text_field_tag :ss_name_5, nil, :placeholder=>"Option 5 Name" %>
