--- a/app/assets/stylesheets/base/_inputs.scss
+++ b/app/assets/stylesheets/base/_inputs.scss
@@ -23,6 +23,7 @@ textarea {
   padding: 8px;
   border: solid 1px #C5C5C5;
   border-radius: 2px;
+  color: #232323 !important;
 
   &:hover, &:focus { 
     //border-color: #A9A9A9;
