--- a/app/views/restaurants/bank_account.html.erb
+++ b/app/views/restaurants/bank_account.html.erb
@@ -6,7 +6,10 @@
 </script>
 
 <%= form_tag(save_bank_account_restaurant_path(@restaurant), :method => "POST", :id=>"bank-form") do %>
-	Account Type: <%= radio_button_tag(:account, "individual") %> <%= label_tag :account_individual, "Individual" %> <%= radio_button_tag(:account, "corporation") %><%= label_tag :account_corporation, "Corporation" %>  <br />
+	<h4>Account Type:</h4>
+  <%= radio_button_tag(:account, "individual") %> <%= label_tag :account_individual, "Individual" %>
+  <%= radio_button_tag(:account, "corporation") %> <%= label_tag :account_corporation, "Corporation" %>
+  <br />
 
 	Name:* <%= text_field_tag :name, nil, :class => "form-control" %>
 <% end %>
