fixed receipt_email email

--- a/app/views/receipt_mailer/receipt_email.html.erb
+++ b/app/views/receipt_mailer/receipt_email.html.erb
@@ -64,6 +64,6 @@
 	</table>
 https://www.shnackapp.com/<%= order_path @order %>
 
-<h5 class="text-center"> Thank you for using Shnack! If you had any problems or would like to give us feedback, we'd love to hear what you have to say! E-mail us at contact@shnackapp.com </h5>
+<h5 class="text-center"> Thank you for using Shnack! If you had any problems or would like to give us feedback, we'd love to hear what you have to say! E-mail us at admin@shnackapp.com </h5>
   </body>
 </html>
