--- a/app/assets/stylesheets/base/_inputs.scss
+++ b/app/assets/stylesheets/base/_inputs.scss
@@ -72,6 +72,7 @@ label {
   input[type=email],
   input[type=password],
   input[type=tel],
+  input[type=number],
   textarea,
   input[type=checkbox],
   input[type=radio] {
@@ -82,6 +83,7 @@ label {
   input[type=text],
   input[type=email],
   input[type=password],
+  input[type=number],
   input[type=tel],
   textarea {
     padding: 8px;
