--- a/app/views/shared/_cart.html.erb
+++ b/app/views/shared/_cart.html.erb
@@ -1,4 +1,4 @@
-<h1 style="font-size:2em;">Cart</h1>
+<h1 style="font-size:2em;margin-bottom:5px;">Cart</h1>
 <div id="cart-contents" class="mar-bottom-sml">
   Nothing in cart
 </div>
