--- a/app/views/charges/_create_account_login.html.erb
+++ b/app/views/charges/_create_account_login.html.erb
@@ -16,7 +16,16 @@
 	    <%= password_field(:user, :password, :class => "form-control", :id => "order-password", :placeholder => "Password") %>
     <% end %>
 	</div>
-	<%= render 'credit_card_form', :locals => { :form_id => "create-account-form", :button_text => "Create Account & Pay For Order", :button_id => "pay-button" } %>
+
+	<% if @owner.cash_only %>
+		<%= form_tag "#", :id => "cash-only-form", :"data-form"=> "create-account-form"   do %>
+			<%= button_tag(type: 'submit', class: "push-btn darkslategray mar-top", id: "pay-button") do %>
+		        <%= "Create Account & Complete Order" %>
+		    <% end %>
+		<% end %>
+	<% else %>
+		<%= render 'credit_card_form', :locals => { :form_id => "create-account-form", :button_text => "Create Account & Pay For Order", :button_id => "pay-button" } %>
+	<% end %>
 
 	  <span class="right pad-top-sml"><%= image_tag "solid.png" %></span>
 </div>
