--- a/app/views/charges/_logged_in_payment.html.erb
+++ b/app/views/charges/_logged_in_payment.html.erb
@@ -13,26 +13,37 @@
         <span class="charges-shnack-credit"></span>
       </label>
     <% end %>
-        
-    <% if current_user.has_cards? %>
-      <% current_user.cards.each_with_index do |card, index| %>
+    <% unless @owner.cash_only %>     
+      <% if current_user.has_cards? %>
+        <% current_user.cards.each_with_index do |card, index| %>
+          <label>
+            <%= radio_button_tag(:user_card, index) %>
+            <%= card.last4 + " " + card.brand %>
+          </label>
+        <% end %>
+
         <label>
-          <%= radio_button_tag(:user_card, index) %>
-          <%= card.last4 + " " + card.brand %>
+          <%= radio_button_tag(:user_card, "new", false, :class => "charges", id: "new-card-button" ) %>
+          Add a new card
         </label>
+
+      <%end%>
+    <% end %>
+  <% end %>
+
+  <% unless @owner.cash_only %>
+    <div>
+      <%= render 'credit_card_form', :locals => { :form_id => "select-card-form", :button_text => "Pay & Place Order", :button_id => "pay-logged-in-button" }%>
+    </div>  
+  <% else %>
+    <%= form_tag "#", :id => "cash-only-form", :"data-form"=> "select-card-form"   do %>
+      <%= button_tag(type: 'submit', class: "push-btn darkslategray mar-top", id: "pay-logged-in-button") do %>
+           Pay & Place Order
       <% end %>
-      
-      <label>
-        <%= radio_button_tag(:user_card, "new", false, :class => "charges", id: "new-card-button" ) %>
-        Add a new card
-      </label>
+    <% end %>
+  <% end %>
 
-    <%end%>
-  <%end%>
 
-  <div>
-    <%= render 'credit_card_form', :locals => { :form_id => "select-card-form", :button_text => "Pay & Place Order", :button_id => "pay-logged-in-button" }%>
-  </div>
   <%= image_tag "solid.png", :class => "right pad-top-sml" %>
 
 
