--- a/app/views/application/styleguide.html.erb
+++ b/app/views/application/styleguide.html.erb
@@ -37,6 +37,7 @@
       <hr>
 
       <button class="">Button</button>
+      <button disabled="disabled">Disabled</button>
       <button class="red">Button red</button>
       <button class="brown">Button brown</button>
       <button class="green">Button Green</button>
@@ -77,12 +78,12 @@
       <a href="#" class="action-btn red">Red</a>
       <a href="#" class="action-btn brown">Brown</a>
       <a href="#" class="action-btn green">Green</a>
-      <a href="#" class="action-btn blue">Blue</a>
+      <a href="#" class="action-btn blue" disabled="disabled">Blue Disabled</a>
       <a href="#" class="action-btn darkseagreen">Darkseagreen</a>
       <a href="#" class="action-btn lightgreen">Lightgreen</a>
       <a href="#" class="action-btn darkgreen">Darkgreen</a>
       <a href="#" class="action-btn lightred">Lightred</a>
-      <a href="#" class="action-btn darkred">Darkred</a>
+      <a href="#" class="action-btn darkred" disabled="disabled">Darkred Disabled</a>
 
       <hr>
       <span>Buttons/Anchors with class push-btn</span>
@@ -93,13 +94,13 @@
               <button class="push-btn red">Push Button</button>
               <button class="push-btn green">Push Button</button>
               <button class="push-btn blue">Push Button</button>
-              <button class="push-btn brown">Push Button</button>
+              <button class="push-btn brown" disabled="disabled">Push Button Disable</button>
           </section>
           <section class="column six mar-bot-children">
               <a href="#" class="push-btn lightgreen">Push Anchor</a>
               <a href="#" class="push-btn darkgreen">Push Anchor</a>
               <a href="#" class="push-btn darkseagreen">Push Anchor</a>
-              <a href="#" class="push-btn lightred">Push Anchor</a>
+              <a href="#" class="push-btn lightred" disabled="disabled">Push Anchor Disabled</a>
               <a href="#" class="push-btn darkred">Push Anchor</a>
 
           </section> 
