--- a/app/views/charges/_credit_card_form.html.erb
+++ b/app/views/charges/_credit_card_form.html.erb
@@ -27,7 +27,7 @@
     <div class="flash-alert slow password-error" style="display:none;"> Please enter a password of at least 6 characters </div>
 
     <div class="twelve">
-      <%= button_tag(type: 'submit', class: "push-btn darkslategray mar-top", id: locals[:button_id]) do %>
+      <%= button_tag(type: 'submit', class: "push-btn mar-top", id: locals[:button_id]) do %>
         <%= locals[:button_text] %>
       <% end %>
     </div>
