--- a/app/views/charges/_logged_in_payment.html.erb
+++ b/app/views/charges/_logged_in_payment.html.erb
@@ -37,7 +37,7 @@
     </div>  
   <% else %>
     <%= form_tag "#", :id => "cash-only-form", :"data-form"=> "select-card-form"   do %>
-      <%= button_tag(type: 'submit', class: "push-btn darkslategray mar-top", id: "pay-logged-in-button") do %>
+      <%= button_tag(type: 'submit', class: "push-btn mar-top", id: "pay-logged-in-button") do %>
            Pay & Place Order
       <% end %>
     <% end %>
