--- a/app/assets/stylesheets/base/_buttons.scss
+++ b/app/assets/stylesheets/base/_buttons.scss
@@ -1,20 +1,3 @@
-a {
-  text-decoration: none;
-  font-weight: 500;
-  //color: #01A;
-
-  &:visited {
-    //color: #01A;
-    text-decoration: none;
-  }
-
-  &:hover {
-    //color: khaki;
-    text-decoration: none;
-  }
-}
-
-
 .basic-btn {
   display: inline-block;
   font: normal 16px/100% "Dosis", Tahoma, sans-serif;
@@ -31,17 +14,14 @@ a {
   }
 
   &:hover {
-    background-color: #E0E0E0;
+    background-color: #B0B0B0;
   }
 
-  &[disabled=disabled] {
-    background-color: #999;
-    color: white;
-    &:before {
-      font-family: "Damion";
-      content: "X ";
-      font-size: 1.5em;
-    }
+  &[disabled] {
+    background-color: #753333 !important;
+    color: lighten(#753333, 25%) !important;
+    cursor: not-allowed;
+    @include box-shadow(0 0 3px $black inset);
   }
 
 }
@@ -65,22 +45,22 @@ input[type=button] {
 }
 
 /* used for top bar TODO */
-a.user {
-  color: white;
-  font-weight: bold;
-  font-size: 1.1em;
-  padding: 5px;
-  //margin: 0px;
-  height: 100%;
-  font-family: Dosis, sans-serif;
+.user-links {
+  a {
+    color: white;
+    font-weight: bold;
+    font-size: 1.1em;
+    padding: 5px;
+    height: 100%;
+    font-family: Dosis, sans-serif;
 
-  &:hover {
-    color: khaki;
-    text-decoration: none;
-  }
+    &.signup {
+      color: khaki !important;
+    }
 
-  &:not(:last-child) {
-    //border-right: 2px solid red;
+    &:hover {
+      text-decoration: none;
+    }
   }
 }
 
