minor color touches

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -106,10 +106,12 @@
 
 
 
+
 //probably trash
+//for select_stadium
 div.list-group.select .list-group-item  {
   border-radius: 0px;
-  background-color: white;
+  background-color: whitesmoke;
   border-color: #ddd;
   font-size:1.4em;
   color: $red;
