--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -86,7 +86,7 @@
 	</div>
 
 	<% unless user_signed_in? %>
-		<section class="wrapper-khaki text-center pad">
+		<section class="wrapper-khaki text-center pad" style="margin-top: 75px;">
 			<div class="my-container-half">
 				<h4 class="SSS bold">Limited time offer</h4>
 				<p class="pad-bottom">Sign up today and get $5 in Shnack Credit</p>
