--- a/app/views/charges/_create_account_login.html.erb
+++ b/app/views/charges/_create_account_login.html.erb
@@ -15,6 +15,13 @@
 	    <%= text_field(:user, :email, :class =>"form-control", :id=> "order-email", :placeholder => "E-mail Address") %>
 	    <%= password_field(:user, :password, :class => "form-control", :id => "order-password", :placeholder => "Password") %>
     <% end %>
+
+    <div class="flash-alert stop stripe-error" style="display:none;"> </div>
+    <div class="flash-alert stop name-error" style="display:none;">Please enter your name</div>
+    <div class="flash-alert stop phone-error" style="display:none;">Please enter a valid phone number or we won't be able to let you know when your order's ready!</div>
+    <div class="flash-alert stop email-error" style="display:none;"> Please enter a valid e-mail address or we won't be able to send you your receipt!</div>
+    <div class="flash-alert slow password-error" style="display:none;"> Please enter a password of at least 6 characters </div>
+    
 	</div>
 
 	<% if @owner.cash_only %>
