--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -6,8 +6,7 @@
   <body>
     <h1>Welcome to Shnack, <%= @user.name %>!</h1>
     <p>
-      You have successfully signed up to Shnack, and $5.00 has been credited to your account.
-      Enjoy!
+      You have successfully signed up to Shnack for GEM's Demo Day. We hope you have a great evening!
     </p>
     <p>
       To login to the site, just follow this link: <%= @url %>.
