--- a/app/views/menu/new_modifier.html.erb
+++ b/app/views/menu/new_modifier.html.erb
@@ -28,11 +28,11 @@
 		<% 3.times do |i| %>
 			<%= text_field_tag "option_name_#{i}".to_sym, nil, :placeholder=>"Option #{i+1} Name" %>
 			<span class="independent-price">
-				<%= text_field_tag "option_price_#{i+1}".to_sym, nil, :type=>"number", :placeholder=>"Price #{i+1}" %>
+				<%= text_field_tag "option_price_#{i}".to_sym, nil, :type=>"number", :placeholder=>"Price #{i+1}" %>
 			</span>
 			<div class="size-dependent-prices well" style="display:none;"> 
 				<% num_sizes.times do |j| %>
-					<%= text_field_tag "option_price_#{i+1}_#{j+1}".to_sym, nil, :type=>"number", :placeholder=>"Price for Option #{i+1} for #{size.options[j].name}"  %>
+					<%= text_field_tag "option_price_#{i}_#{j}".to_sym, nil, :type=>"number", :placeholder=>"Price for Option #{i+1} for #{size.options[j].name}"  %>
 				<% end %>
 			</div>
 		<% end %>
