--- a/app/assets/stylesheets/modules/my_wells.css.scss
+++ b/app/assets/stylesheets/modules/my_wells.css.scss
@@ -22,13 +22,12 @@
   @extend .my-well;
   padding: 12px;
 }
-
 .my-well-black {
-  @extend .my-well;
-  background-color: #353535;
-  color: $white;
+ @extend .my-well;
+ background-color: #353535 ;
+ :not(input) { color: $white; }
 
-  label { color: darkseagreen !important; }
+ label { color: darkseagreen !important; } 
 }
 
 /* going to delete these, add the color with a color utility */
